--- a/articles/css/style.css
+++ b/articles/css/style.css
@@ -19,6 +19,11 @@
 .img {
     max-width: 40%;
 }
+.div-center{
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
 
 body {
     padding:0;
